tdf#108000 sw layout: ignore emulated keep on large tables

There is no point in a very large (multipage) table keeping with
the following content and it just makes the layout more complex.
This is especially true when we are emulating this using
MSWord's convention, and not LO's native table-keep option.

This patch only affects my earlier code for emulated tables.
Otherwise, something about the general logic could loop
forever in certain huge tables. This seemed like a very
reasonable compromise.

Change-Id: Ic1bde12b266e71fc9f608ec4d1223277108750fa